==> Allegra42/waveshare_epaper/Arduino-epd/epd.cpp <==
#include "epd.h"
#include <Arduino.h>

static void _putchars(const unsigned char * ptr, int n)
{
	int i, x;
	
	for(i = 0; i < n; i++)
	{
	    x = ptr[i];
		Serial1.write(x);
	}
}

void epd_init(void)
{
	Serial1.begin(115200);
	pinMode(wake_up, HIGH);
	pinMode(reset, HIGH);
}

void epd_reset(void)
{
	digitalWrite(reset, LOW);
	delayMicroseconds(10);
	digitalWrite(reset, HIGH);
	delayMicroseconds(500);
	digitalWrite(reset, LOW);
	delay(3000);
}

void epd_wakeup(void)
{
	digitalWrite(wake_up, LOW);
	delayMicroseconds(10);
	digitalWrite(wake_up, HIGH);
	delayMicroseconds(500);
	digitalWrite(wake_up, LOW);
	delay(10);
}
